modified:   index.html

--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
                             <p>JavaScript</p>
                         </div>
                         <div class="flex justify-evenly mt-[2rem] mobile-links">
-                            <a href="" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://github.com/Utkarsh3128/FrontEndPractice-Ableton" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
                                 Code
                                 <i class="fa-brands fa-github"></i>
                             </a>
-                            <a href="" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://utkarsh3128.github.io/FrontEndPractice-Ableton/" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
                                 Live Demo
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                             </a>
@@ -335,11 +335,11 @@
                             <p>CSS3</p>
                         </div>
                         <div class="flex justify-evenly mt-[2rem] mobile-links">
-                            <a href="" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://github.com/Utkarsh3128/Trello-Clone" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
                                 Code
                                 <i class="fa-brands fa-github"></i>
                             </a>
-                            <a href="" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://utkarsh3128.github.io/Trello-Clone/" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
                                 Live Demo
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                             </a>
@@ -360,11 +360,11 @@
                             <p>JavaScript</p>
                         </div>
                         <div class="flex justify-evenly mt-[2rem] mobile-links">
-                            <a href="" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://github.com/Utkarsh3128/FrontendPractice-Monogram" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
                                 Code
                                 <i class="fa-brands fa-github"></i>
                             </a>
-                            <a href="" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://utkarsh3128.github.io/FrontendPractice-Monogram/" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
                                 Live Demo
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                             </a>
@@ -374,7 +374,7 @@
 
                 <div class="mobile-view mx-auto">
                     <div class="inner-view">
-                        <a href="https://github.com/Utkarsh3128?tab=repositories"
+                        <a href="https://github.com/Utkarsh3128?tab=repositories" target="_blank"
                             class="px-[21px] py-[9px] border-[1px] border-white hover-me view-link">
                             <span class="text-[15px] uppercase">
                                 View all Projects
