--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="bg-gradient-to-r from-[hsl(221,83%,53%)] to-purple-400  bg-cover bg-no-repeat text-white">
     <!-- from-[#2563eb] to-purple-400 -->
     <div class="cursor"></div>
-    <header class="mb-[4rem]">
+    <header class="mb-[4rem]" data-aos="fade-down" data-aos-duration="700">
         <nav class="flex justify-around items-center min-h-[8vh]">
             <div class="font-[Anurati] uppercase text-[29px] text-white logo">
                 <h4>uk</h4>
@@ -78,13 +78,12 @@
     <section class="my-[4rem]" id="about">
         <div class="max-w-[1080px] mx-auto">
             <div class="px-4">
-                <h3 class="text-[1.5rem] leading-[1.33333] font-[600] mt-5 about-text">I'm a B.Tech Computer Science and Engineering
+                <h3 class="text-[1.5rem] leading-[1.9] font-[600] mt-5 about-text">I'm a B.Tech Computer Science and
+                    Engineering
                     student at Bharati Vidyapeeth
                     Deemed to be University.
-                    <br>
                     I'm a Self taught Front-End Web developer with a passion for creating user-friendly and dynamic
                     websites.
-                    <br>
                     I possess an impressive arsenal of skills in HTML, CSS, JavaScript and Tailwind. My expertise
                     lies in crafting dynamic, engaging interfaces through writing clean and optimized code</h3>
             </div>
@@ -310,11 +309,13 @@
                             <p>JavaScript</p>
                         </div>
                         <div class="flex justify-evenly mt-[2rem] mobile-links">
-                            <a href="https://github.com/Utkarsh3128/FrontEndPractice-Ableton" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://github.com/Utkarsh3128/FrontEndPractice-Ableton" target="_blank"
+                                class="text-[1.25rem] flex gap-2 items-center">
                                 Code
                                 <i class="fa-brands fa-github"></i>
                             </a>
-                            <a href="https://utkarsh3128.github.io/FrontEndPractice-Ableton/" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://utkarsh3128.github.io/FrontEndPractice-Ableton/" target="_blank"
+                                class="text-[1.25rem] flex gap-2 items-center">
                                 Live Demo
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                             </a>
@@ -335,11 +336,13 @@
                             <p>CSS3</p>
                         </div>
                         <div class="flex justify-evenly mt-[2rem] mobile-links">
-                            <a href="https://github.com/Utkarsh3128/Trello-Clone" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://github.com/Utkarsh3128/Trello-Clone" target="_blank"
+                                class="text-[1.25rem] flex gap-2 items-center">
                                 Code
                                 <i class="fa-brands fa-github"></i>
                             </a>
-                            <a href="https://utkarsh3128.github.io/Trello-Clone/" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://utkarsh3128.github.io/Trello-Clone/" target="_blank"
+                                class="text-[1.25rem] flex gap-2 items-center">
                                 Live Demo
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                             </a>
@@ -360,11 +363,13 @@
                             <p>JavaScript</p>
                         </div>
                         <div class="flex justify-evenly mt-[2rem] mobile-links">
-                            <a href="https://github.com/Utkarsh3128/FrontendPractice-Monogram" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://github.com/Utkarsh3128/FrontendPractice-Monogram" target="_blank"
+                                class="text-[1.25rem] flex gap-2 items-center">
                                 Code
                                 <i class="fa-brands fa-github"></i>
                             </a>
-                            <a href="https://utkarsh3128.github.io/FrontendPractice-Monogram/" target="_blank" class="text-[1.25rem] flex gap-2 items-center">
+                            <a href="https://utkarsh3128.github.io/FrontendPractice-Monogram/" target="_blank"
+                                class="text-[1.25rem] flex gap-2 items-center">
                                 Live Demo
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                             </a>
@@ -395,7 +400,7 @@
         <div class="max-w-[1140px] mx-auto">
             <p class="text-[3rem] text-center mb-9 contact-para">Contact Me</p>
             <div class="flex justify-between items-center py-[5rem] contact-section">
-                <div class="leading-[65px] text-[18px] contact-info">
+                <div class="leading-[65px] text-[18px] contact-info" data-aos="fade-right">
                     <div class="w-[250px] h-[50px] flex justify-between mx-auto contact-link">
                         <a href="https://github.com/Utkarsh3128" target="_blank">
                             <i class="fa-brands fa-github text-[2rem]"></i>
@@ -415,7 +420,7 @@
                     <div class="contact-text"><i class="fas fa-envelope mr-4"></i>utkarshcr73128@gmail.com</div>
                     <div class="contact-text"><i class="fas fa-phone mr-4"></i>+91 9693 912 010</div>
                 </div>
-                <div class="max-w-[700px] contact-form">
+                <div class="max-w-[700px] contact-form" data-aos="fade-left">
                     <form class="contact" onsubmit="">
                         <input type="text" name="name" placeholder="Your Name *"
                             class="text-[15px] p-[12px] rounded-[5px] h-[50px] w-[calc(50%-10px)] opacity-80 mb-[2rem] text-box">
