modified:   index.html

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
             </div>
 
             <div class="mobile-skills hidden grid-cols-[1fr_1fr] mx-auto gap-8 text-center">
-                <img src="images/html.svg" class="w-[60px] h-[60px] mx-auto">
-                <img src="images/css.svg" class="w-[69px] h-[60px] mx-auto">
-                <img src="images/js.svg" class="w-[60px] h-[60px] mx-auto">
-                <img src="images/java.svg" class="w-[60px] h-[60px] mx-auto">
-                <img src="images/git.svg" class="w-[60px] h-[60px] mx-auto">
-                <img src="images/vscode.svg" class="w-[60px] h-[60px] mx-auto">
+                <img src="images/html.svg" class="w-[60px] h-[60px] mx-auto" data-aos="zoom-out">
+                <img src="images/css.svg" class="w-[69px] h-[60px] mx-auto" data-aos="zoom-out">
+                <img src="images/js.svg" class="w-[60px] h-[60px] mx-auto" data-aos="zoom-out">
+                <img src="images/java.svg" class="w-[60px] h-[60px] mx-auto" data-aos="zoom-out">
+                <img src="images/git.svg" class="w-[60px] h-[60px] mx-auto" data-aos="zoom-out">
+                <img src="images/vscode.svg" class="w-[60px] h-[60px] mx-auto" data-aos="zoom-out">
             </div>
         </div>
     </section>
@@ -296,7 +296,7 @@
 
             <div class="grid grid-cols-[1fr] grid-rows-[auto_auto] h-auto w-full gap-[5rem] grid-proj">
 
-                <div class="flex flex-col h-auto mx-auto">
+                <div class="flex flex-col h-auto mx-auto" data-aos="fade-right">
                     <div class="h-auto rounded-[1.7rem] project-img">
                         <img src="images/ableton.png" alt="" class="w-full h-auto rounded-lg">
                     </div>
@@ -323,7 +323,7 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col h-auto mx-auto">
+                <div class="flex flex-col h-auto mx-auto" data-aos="fade-left">
                     <div class="h-auto rounded-[1.7rem] project-img">
                         <img src="images/trello.png" alt="" class="w-full h-auto rounded-lg">
                     </div>
@@ -350,7 +350,7 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col h-auto mx-auto">
+                <div class="flex flex-col h-auto mx-auto" data-aos="fade-right">
                     <div class="h-auto rounded-[1.7rem] project-img">
                         <img src="images/monogram.png" alt="" class="w-full h-auto rounded-lg">
                     </div>
