modified:   index.html

--- a/index.html
+++ b/index.html
@@ -423,9 +423,9 @@
                 <div class="max-w-[700px] contact-form" data-aos="fade-left">
                     <form class="contact" onsubmit="">
                         <input type="text" name="name" placeholder="Your Name *"
-                            class="text-[15px] p-[12px] rounded-[5px] h-[50px] w-[calc(50%-10px)] opacity-80 mb-[2rem] text-box">
+                            class="text-[15px] p-[12px] rounded-[5px] h-[50px] text-black w-[calc(50%-10px)] opacity-80 mb-[2rem] text-box">
                         <input type="email" name="email" placeholder="Your Email *" id="email"
-                            class="ml-3 text-[15px] p-[12px] rounded-[5px] h-[50px] w-[calc(50%-10px)] opacity-80 mb-[2rem] text-box box-2">
+                            class="ml-3 text-[15px] p-[12px] rounded-[5px] h-[50px] text-black w-[calc(50%-10px)] opacity-80 mb-[2rem] text-box box-2">
                         <textarea name="message" id="" cols="10" rows="5"
                             class="text-black w-full p-[12px] min-h-[200px] max-h-[400px] rounded-[5px] opacity-80 mb-[2rem]"
                             placeholder="Your Message *" required></textarea>
